fix(Redesign): price alignment and sent/receive flash notification

--- a/assets/css/utilities/_typography.scss
+++ b/assets/css/utilities/_typography.scss
@@ -10,6 +10,7 @@
 .type-yuge { font-size: 5em; }
 
 .f-36 { font-size: 36px; }
+.f-28 { font-size: 28px; }
 .f-24 { font-size: 24px; }
 .f-20 { font-size: 20px; }
 .f-16 { font-size: 16px; }
